--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <h2>Peta Administrasi Kabupaten Pekalongan</h2>
           <p>Dalam peta administrasi ini berisikan pemetaan curah hujan, luas panen padi sawah, jumlah petani , dan ketinggian wilayah yang terbagi menurut kecamatan di kabupaten Pekalongan</p>
         </div>
-		<iframe src="/smester6/sig/web/webgis/index.html"
+		<iframe src="/Webgis/webgis/index.html"
 		width="1350" height="400" frameborder="0" style="border:1"></iframe>
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
